--- a/unknowns.tex
+++ b/unknowns.tex
@@ -100,13 +100,13 @@ By shifting this presentation slightly, we highlight an interesting comparison m
 
 This alternative presentation of the sphere spectrum as a Tate spectrum yields a filtration spectral sequence \[\pi_* \S^* \Rightarrow \pi_* (\S^{-1})^\wedge_2.\]  In terms of this spectral sequence, any stable stem is represented by a (coset of) element(s) on the \(E_1\)--page, and this reverse reading of the spectral sequence is known as the \textit{Mahowald root invariant}~\cite{MahowaldShick}.  The root invariant appears to possess deeply interesting redshifting properties---not wholly surprising, since we are reading a blueshifting construction in reverse.  For instance, the root of \(p\) lies in the \(\alpha\)--family, and the root of an \(\alpha\)--family element lies in the \(\beta\)--family~\cite{BehrensRootInv}.  The root invariant has many striking connections to other areas of topology~\cite{MahowaldRavenel}.
 
-In addition to the chromatic properties waiting to be explored, the Tate construction itself has some truly puzzling features.  Mahowald's original perspective on the Tate construction was through the definition \[R^{tC_2} := \lim_{n \to \infty} \Susp R \sm \mathrm P^\infty_{-n},\] whereas the general construction of Greenlees--May~\cite{GreenleesMay}\footnote{Stroilova's PhD thesis~\cite{Stroilova} gives a variation of this construction that converts an \(E(n)\)--local ring spectrum to an \(E(n-k)\)--local ring spectrum.} uses the formula \[R^{tG} = (F(EG_+, R) \sm \widetilde{EG})^G,\] whose pieces in the case at hand consist of \(EG_+ = S(\infty \L)\) and \(\widetilde{EG} = S^{\infty \mathcal L}\), which rearranges to give \[R^{tC_2} := \colim_{m \to \infty} F(\mathrm P^\infty_{-m}, R).\]  Something quite spooky has happened: a colimit and a limit were inexplicably interchanged in the formulas \[\RP^\infty_{-\infty} = \colim_n \lim_m \RP^n_{-m} = \lim_m \colim_n \RP^n_{-m}.\]  Understanding why these extremely different constructions give the same answer will likely yield some very important background theory.\footnote{There is a superficially related famous problem known as the Telescope Conjecture.  Namely, there are various ``finitary'' flavors of chromatic localization, which are typically less categorically robust but more computable.  They assemble into a diagram:
+In addition to the chromatic properties waiting to be explored, the Tate construction itself has some truly puzzling features.  Mahowald's original perspective on the Tate construction was through the definition \[R^{tC_2} := \lim_{n \to \infty} \Susp R \sm \mathrm P^\infty_{-n},\] whereas the general construction of Greenlees--May~\cite{GreenleesMay}\footnote{Stroilova's PhD thesis~\cite{Stroilova} gives a variation of this construction that converts an \(E(n)\)--local ring spectrum to an \(E(n-k)\)--local ring spectrum.} uses the formula \[R^{tG} = (F(EG_+, R) \sm \widetilde{EG})^G,\] whose pieces in the case at hand consist of \(EG_+ = S(\infty \L)\) and \(\widetilde{EG} = S^{\infty \mathcal L}\), which rearranges to give \[R^{tC_2} := \colim_{m \to \infty} F(\mathrm P^\infty_{-m}, R).\]  Something quite spooky has happened: a colimit and a limit were inexplicably interchanged in the formulas \[\RP^\infty_{-\infty} = \colim_n \lim_m \RP^n_{-m} = \lim_m \colim_n \RP^n_{-m}.\]  Understanding why these extremely different constructions give the same answer will likely yield some very important background theory.\footnote{The Telescope Conjecture is a famous conjecture which is at least superficially related.  Namely, there are various ``finitary'' flavors of chromatic localization, which are typically less categorically robust but more computable.  They assemble into a diagram:
 \[\begin{array}{ccccc}
 E & \to & L_d^{\fin} E & \to & L_d E \\
 \downarrow & & \downarrow & & \downarrow \\
 L_{X(d)} E & \to & \widehat L_d^{\fin} E & \to & \widehat L_d E,
 \end{array}\]
-where \(X(d)\) is a finite complex of type exactly \(d\), \(v\) is a \(v_d\)--self-map of \(X(d)\), \(T(d) = X(d)[v^{-1}]\) is the localizing telescope, \(\widehat L_d^{\fin}\) is Bousfield localization with respect to \(T(d)\) (which can be shown to be independent of choice of \(X(d)\) and of \(v\)), and \(L_d^{\fin}\) denotes localization with respect to the class of \emph{finite} \(E(d)\)--acyclics.  Much is known about these functors: for instance, \(L_{X(d)} L_d = \widehat L_d\), there is a chromatic fracture square relating \(L_d^{\fin}\) to \(\widehat L_{\le d}^{\fin}\), and \(L_d^{\fin} E \simeq L_d E\) if and only if \(\widehat L_{\le d}^{\fin} E \simeq \widehat L_{\le d} E\).  One major question about these functors remains open, corresponding the last unsettled nilpotence and periodicity conjecture of Ravenel~\cite[Conjecture 10.5]{RavenelLocalizationWRTPeriodic}: is the map \(\widehat L_d^{\fin} E \to \widehat L_d E\) an equivalence?  Multiple proofs and disproofs have been offered~(\cite{RavenelObit}, \cite{MahowaldSadofsky}, \cite{Krause}, \cite{MRS}, \ldots) but the literature (and, indeed, the conjecture) remains unsettled.  Our interest in this problem here is in the formula \[\widehat L_d^{\fin} E = \colim\left(X(d) \sm E \xrightarrow{v} X(d) \sm E\right).\]  This formula uses a colimit, whereas the formula for the right-hand side given in \Cref{FormulaForKnLocalization} uses a limit.}
+where \(X(d)\) is a finite complex of type exactly \(d\), \(v\) is a \(v_d\)--self-map of \(X(d)\), \(T(d) = X(d)[v^{-1}]\) is the localizing telescope, \(\widehat L_d^{\fin}\) is Bousfield localization with respect to \(T(d)\) (which can be shown to be independent of choice of \(X(d)\) and of \(v\)), and \(L_d^{\fin}\) denotes localization with respect to the class of \emph{finite} \(E(d)\)--acyclics.  Much is known about these functors: for instance, \(L_{X(d)} L_d = \widehat L_d\), there is a chromatic fracture square relating \(L_d^{\fin}\) to \(\widehat L_{\le d}^{\fin}\), and \(L_d^{\fin} E \simeq L_d E\) if and only if \(\widehat L_{\le d}^{\fin} E \simeq \widehat L_{\le d} E\).  One major question about these functors remains open, corresponding the last unsettled nilpotence and periodicity conjecture of Ravenel~\cite[Conjecture 10.5]{RavenelLocalizationWRTPeriodic}: is the map \(\widehat L_d^{\fin} E \to \widehat L_d E\) an equivalence?  Multiple proofs and disproofs have been offered~(\cite{RavenelObit}, \cite{MahowaldSadofsky}, \cite{Krause}, \cite{MRS}, \ldots) but the literature (and, indeed, the conjecture) remains unsettled.  Our interest in this problem here is in the formula \[\widehat L_d^{\fin} E = \colim\left(\cdots \to X(d) \sm E \xrightarrow{v} X(d) \sm E \to \cdots\right).\]  This formula uses a colimit, whereas the formula for the right-hand side given in \Cref{FormulaForKnLocalization} uses a limit.}
 
 The blueshifting behavior of the Tate construction begs for insertion into the framework for understanding chromatic homotopy theory described in the main thread of this text.  For instance, the formal-geometric perspective on the isomorphism in Lin's theorem is that the residue map \(\F_2(\!(x)\!) \to \F_2\{x^{-1}\}\) is a quasi-isomorphism of continuous Steenrod comodules~\cite[Remark 8.34]{StricklandFSFG}.\footnote{Reader beware: it is, of course, illegal to commute ordinary homology past the inverse limit.}  The framework of \(p\)--divisible groups appearing around the edges of this book seems to show a lot of promise for serving as a general organizing principle for these ``transchromatic'' results, but this largely has not been worked out.\footnote{For instance, contact between \(p\)--divisible groups and the Tate construction is visible in work of Greenlees and Strickland~\cite{GreenleesStrickland}, \cite[pg.\ 10]{StricklandFPFP}, and \(p\)--divisible groups have played a central role in the height-modulating phenomena of Hopkins--Kuhn--Ravenel character theory (see \Cref{CharacterTheorySection}, \cite{HKR}) and in its extensions by Stapleton (see, for example, \cite{Stapleton,StapletonTwisted}).}\footnote{It is formally obvious that \(L_\Gamma\) is blueshifting, but in most cases this operation is computationally opaque.  A theme in this area of homotopy theory is to recognize one form of height modulation in terms of another, so that their respective technical benefits can be simultaneously employed---for instance, this is the meat of chromatic character theory.}
 
@@ -121,18 +121,18 @@ A question we have cheerfully left unresolved is: what is so special about \(MU\
 
 First, one can ask this question just considering \(MU\) as a ring spectrum.  From this perspective, we summarized the most important resuls about \(MU\) in \Cref{MUInducesSpectrumHomeo}: the context functor perfectly detects the Balmer spectrum of the global stable category.  Given a general ring spectrum \(R\), we can ask two questions analogous to this result:
 \begin{enumerate}
-\item Can one find an \(R\)--algebra \(S\) whose context functor induces a homeomorphism of Balmer spectra \(\Spec(\CatOf{Modules}_R^{\perf}) \to \Spec(\CatOf{QCoh}(\context{S/R}))\)?\footnote{Note that the right-hand side is a completely algebraic construction: these are simplicial sheaves of modules.}
-\item Given a thick \(\otimes\)--ideal \(\alpha\), is there a complementary localizer \[L_\alpha\co \CatOf{Modules}_R \to \CatOf{Modules}_{R,(\alpha)}?\]  Can these localizers be presented via Bousfield's framework as homological localizations for auxiliary \(S\)--algebra spectra \(S_\alpha\) (cf.\ \Cref{BousfieldLocalizationThm})?  Do the contexts \(\context{S_\alpha}\) admit compatible localizers with \(\context{S}\)?
+\item Can one find an \(R\)--algebra \(S\) whose context functor induces a homeomorphism of Balmer spectra \(\Spec(\CatOf{Modules}_R^{\perf}) \to \Spec(\CatOf{Coh}(\context{S/R}))\)?\footnote{Note that the right-hand side is a completely algebraic construction: these are simplicial sheaves of modules.}
+\item Given a thick \(\otimes\)--ideal \(\alpha \subseteq \CatOf{Modules}_R\), is there a complementary localizer \[L_\alpha\co \CatOf{Modules}_R \to \CatOf{Modules}_{R,(\alpha)}?\]  Can these localizers be presented via Bousfield's framework as homological localizations for auxiliary \(S\)--algebra spectra \(S_\alpha\) (cf.\ \Cref{BousfieldLocalizationThm})?  Do the contexts \(\context{S_\alpha/R}\) admit compatible localizers with \(\context{S/R}\)?
 \end{enumerate}
 For \(R = \S\), this is precisely the role that the \(R\)--algebra \(S = MU\) and the \(S\)--algebras \(S_d = E(d)\) play.\footnote{A potentially useful observation is that this does not appear to be a question in the domain of highly structured ring spectra.  After all, the ring spectra \(E(d)\) are not known to be \(E_\infty\).}
 
-There are some obvious restrictions on the \(R\)--algebra \(S\): for instance, because we intend to use \(S\) to form a context, we require that \(\pi_* S\) (and \(\pi_* S^{\sm_R (j)}\) generally) be even.  There are, in fact, two results in the literature that shed light on exactly this requirement.  First, Priddy showed that by iteratively attaching cells to the \(p\)--local sphere in order to ensure that it has only even-dimensional homotopy, one arrives at \(BP\)~\cite{Priddy}.  More recently, Beardsley showed that \(MU_{(p)}\) arises similarly by inductively attaching \(A_\infty\)--algebra cells to kill the odd homotopy on the \(p\)--local sphere~\cite{Beardsley}.\footnote{He also identifies certain intermediate spectra in this process as the spectra \(X(n)\) that arise for Devinatz, Hopkins, and Smith in their proof of the nilpotence conjectures~\cite{DHS}.  He also shows that this procedure works integrally, but there is lingering unexplained geometric information in how the cells are attached.}  It would be satisfying to understand whether some construction like this holds in any sort of generality.
+There are some obvious restrictions on the \(R\)--algebra \(S\): for instance, because we intend to use \(S\) to form a context, we require that \(\pi_* S\) (and \(\pi_* S^{\sm_R (j)}\) generally) be even.  There are, in fact, two results in the literature that shed light on exactly this requirement.  First, Priddy showed that by iteratively attaching cells to the \(p\)--local sphere in order to ensure that it has only even-dimensional homotopy, one arrives at \(BP\)~\cite{Priddy}.  More recently, Beardsley showed that \(MU_{(p)}\) arises similarly by inductively attaching \(A_\infty\)--algebra cells to kill the odd homotopy on the \(p\)--local sphere~\cite{Beardsley}.\footnote{He also identifies certain intermediate spectra in this process as the spectra \(X(n)\) that arise for Devinatz, Hopkins, and Smith in their proof of the nilpotence conjectures~\cite{DHS}.  He \emph{also} shows that this procedure works integrally, but there is lingering unexplained geometric information in how the cells are attached.}  It would be satisfying to understand whether some construction like this holds in any sort of generality.
 
 For a second perspective, using the adjunction \[\CatOf{RingSpectra}(MU, E) \cong \CatOf{Spectra}_{\S/}(\Susp^{-2} \Susp^\infty \CP^\infty, E),\] we might ask: what's so special about the space \(\CP^\infty\)?  Much of the contents of this book supports the following perspective: given a space \(X\), we consider the \(E_\infty\)--ring pro-spectrum \(DX_+ = \{F(X_\alpha, \S)\}_\alpha\).  Because each \(X_\alpha\) is a compact object, base-change along the unit map \(\eta\co \S \to E\) is computed by the following formula:
 \begin{align*}
 \eta^* DX_+ = E \sm \{F(X_\alpha, \S)\}_\alpha = \{E \sm F(X_\alpha, \S)\}_\alpha = \{F(X_\alpha, E)\}_\alpha.
 \end{align*}
-Applying the functor \(\Spf \circ \pi_0\) to this pro-system yields the formal scheme \(X_E\) considered in \Cref{FullDefnOfXE}.  One of the overarching themes of this book has been to think of the objects \(X\) and \(DX_+\) as spectral incarnations of some algebro-geometric recipe, which base-change along \(\eta\) to form classical algebro-geometric constructions which have been ``bound'' to \(E\).  The situation, as pointed out around \Cref{MUstarVsMUAsModuli}, is somewhat analogous to that of Lubin and Tate's explicit local class field theory, where a certain recipe associates to a local number field a governing formal group in terms of which much of the structure of the number field can be cast.\footnote{Jack Morava is very insistent on parameterizing his \(K\)--theories not by a formal group but by a local number field \(L\) and its Lubin--Tate \(p\)--divisible group, a trend not picked up on by most other algebraic topologists.  In connection with the ``topological Langlands program'' hinted at below, he is also highly interested in the Weil--Shafarevich theorem~\cite[Appendix III]{Weil}, which shows that all such number fields arise as maximal tori in certain (fixed) division algebras (dependent on the degree of the extension), and their Galois groups can be understood through this embedding.  This forms a thread through his entire body of literature, but some of his most recent thoughts on this can be found in \cite{MoravaTHH}.}  In the setting of algebraic topology, such a ``recipe'' is embodied by \(\CP^\infty\) itself.  Understanding in what sense \(\CP^\infty\) is encoding anything (or any of the other spaces discussed in this text) is an important challenge for homotopy theorists in years to come.\footnote{An extremely interesting and recent preprint of Lurie~\cite{LurieEllII} gives a real foothold on ``spectral formal geometry'', including non-complex-orientable examples of spectral formal groups, a characterization of Morava \(E\)--theory as an \(E_\infty\)--ring spectrum in this framework, and an analysis of what is ``special'' about the (spectral) formal group associated to \(\CP^\infty\).  This portends a more delicate description of the spectral role of \(MU\): whereas \(MU_*\) classifies formal groups in the large, the behavior of \(MU\)--orientations must be somehow tightly bound to the particular spectral formal group associated to \(\CP^\infty\).}
+Applying the functor \(\Spf \circ \pi_0\) to this pro-system yields the formal scheme \(X_E\) considered in \Cref{FullDefnOfXE}.  One of the overarching themes of this book has been to think of the objects \(X\) and \(DX_+\) as spectral incarnations of some algebro-geometric recipe, which base-change along \(\eta\) to form classical algebro-geometric constructions which have been ``bound'' to \(E\).  The situation, as pointed out around \Cref{MUstarVsMUAsModuli}, is somewhat analogous to that of Lubin and Tate's explicit local class field theory, where a certain recipe associates to a local number field a governing formal group in terms of which much of the structure of the number field can be cast.\footnote{Jack Morava is very insistent on parameterizing his \(K\)--theories not by a formal group but by a local number field \(L\) and its Lubin--Tate \(p\)--divisible group, a trend not picked up on by most other algebraic topologists.  In connection with the ``topological Langlands program'' hinted at below, he is also highly interested in the Weil--Shafarevich theorem~\cite[Appendix III]{Weil}, which shows that all such number fields arise as maximal tori in certain (fixed) division algebras (dependent on the degree of the extension), and their Galois groups can be understood through this embedding.  This forms a thread through his entire body of literature, but some of his most recent thoughts on this can be found in \cite{MoravaTHH}.}  In the setting of algebraic topology, such a ``recipe'' is embodied by \(\CP^\infty\) itself.  Understanding in what sense \(\CP^\infty\) is encoding anything (or any of the other spaces discussed in this text) is an important challenge for homotopy theorists in years to come.\footnote{An extremely interesting and recent preprint of Lurie~\cite{LurieEllII} gives a real foothold on ``spectral formal geometry'', including non-complex-orientable examples of spectral formal groups, a characterization of Morava \(E\)--theory as an \(E_\infty\)--ring spectrum in this framework, and an analysis of what is ``special'' about the (spectral) formal group associated to \(\CP^\infty\).  This portends a more delicate description of the spectral role of \(MU\): whereas \(MU_*\) classifies formal groups in the large, the behavior of \(MU\)--orientations must be somehow tightly bound to the particular spectral formal group associated to \(\CP^\infty\), as in \Cref{MUstarVsMUAsModuli}.}
 
 Lastly, one can ask why these important structure theorems for stable homotopy theory, which have such a glittering link to complicated algebraic constructions, have \emph{manifold geometry} ultimately underpinning them.  Here I have nothing to offer but surprise and confusion.
 
@@ -202,7 +202,7 @@ Even more interestingly, there are explicit lifts of these cohomology classes to
 
 In projective geometry, one studies a projective variety by calculating its global sections against different line bundles: \[X \mapsto [(\L \in \Pic(X)) \mapsto H^0(X; \L)].\]  Done correctly, this can be used to recover a graded ring \(R\) with a natural map \(\operatorname{Proj}(R) \to X\) which is definitionally an isomorphism in the case that \(X\) is affine---that is, this construction captures the isomorphism type of \(X\).
 
-This is somewhat analogous to Whitehead's theorem in homotopy theory: the Picard group of the stable category (i.e., the group of isomorphism classes of spectra \(Y\) such that there exists a \(Y^{-1}\) with \(Y \sm Y^{-1} \simeq \S^0\)) consists of precisely the stable spheres.  However, in the \(K(1)\)--local category there are many more invertible objects---in fact, the Picard group of this category has the form \[\operatorname{Pic}(\CatOf{QCoh}(\CatOf{Spectra}_{\G_m})) \cong \Z_p \times \Z / (2p-2),\] where the right-hand factor exactly tracks the degree of a generator of the \(K(1)\)--homology of an invertible spectrum.  Although Whitehead's theorem only requires testing against the ``standard spheres'', now a mere subgroup of the \emph{much} larger Picard group, the homotopy groups of \(K(1)\)--local spectra as graded over the larger group display considerable extra structure.  For instance, the homotopy groups of the \(K(1)\)--local sphere graded over this larger group are described by the same formula given in \Cref{piLK1SExample}: \[\pi_t \widehat L_1 \S^0 = \begin{cases} \Z_p & \text{when \(t = 0\)}, \\ \Z_p / (pk) & \text{when \(t = k|v_1| - 1\)}, \\ 0 & \text{otherwise}, \end{cases}\] where the symbol \(k\) can now be taken to be any \(p\)--adic integer.  This exactly enforces a kind of \(p\)--adic continuity of this family of groups.
+This is somewhat analogous to Whitehead's theorem in homotopy theory: the Picard group of the stable category (i.e., the group of isomorphism classes of spectra \(Y\) such that there exists a \(Y^{-1}\) with \(Y \sm Y^{-1} \simeq \S^0\)) consists of precisely the stable spheres.  However, in the \(\G_m\)--local category there are many more invertible objects---in fact, the Picard group of this category has the form \[\operatorname{Pic}(\CatOf{Spectra}_{\G_m}) \cong \Z_p \times \Z / (2p-2),\] where the right-hand factor exactly tracks the degree of a generator of the \(\G_m\)--homology of an invertible spectrum.  Although Whitehead's theorem only requires testing against the ``standard spheres'', now a mere subgroup of the \emph{much} larger Picard group, the homotopy groups of \(\G_m\)--local spectra as graded over the larger group display considerable extra structure.  For instance, the homotopy groups of the \(\G_m\)--local sphere graded over this larger group are described by the same formula given in \Cref{piLK1SExample}: \[\pi_t \widehat L_1 \S^0 = \begin{cases} \Z_p & \text{when \(t = 0\)}, \\ \Z_p / (pk) & \text{when \(t = k|v_1| - 1\)}, \\ 0 & \text{otherwise}, \end{cases}\] where the symbol \(k\) can now be taken to be any \(p\)--adic integer.  This exactly enforces a kind of \(p\)--adic continuity of this family of groups.
 
 The idea is that these kinds of observations can be used to bundle the behavior of the homotopy of the \(\Gamma_d\)--local sphere into a digestable format.  The computation of the homotopy of the \(\Gamma_2\)--local sphere has been fully executed by Shimomura and collaborators~\cite{Shimomura,ShimomuraYabeM20,ShimomuraYabeL2S,BehrensRevisited}, but it is \emph{exceedingly} complicated.  The role of continuity properties is to reduce the seemingly erratic behavior of arbitrary functions down to a specification on a dense set.  Further properties---analyticity, say, or more seriously a direct relationship to \(p\)--adic analytic number theory---could reduce the statement to something genuinely tractible.  This idea is meant to be analogous to the relative ease of studying number theoretic \(L\)--functions over trying to understand them through painstaking computation of their special values.  Such a program was initiated by Hopkins~\cite{StricklandpAdicInterpolation}, from which a partial collection of results have emerged.\footnote{Behrens has also pursued a program encoding this problem in terms of modular forms~\cite{BehrensCongruences,BehrensModularDescription,BehrensBuildings}.}  Most strikingly, Mitchell \cite{MitchellIwasawa,HahnMitchell} has fully elucidated this program in the \(\G_m\)--local category, Hovey and Strickland have shown a restricted continuity result in the general setting~\cite[Section 14]{HoveyStrickland}\footnote{Also interesting are some negative results, such as: the number of Picard-places where the homotopy of \(\widehat L_2 M(p)\) has infinite order has positive Haar measure~\cite[Section 15.2]{HoveyStrickland}.}, and the original work of Hopkins, Mahowald, and Sadofsky~\cite{HMS} shows that the following pair of squares are both pullbacks:
 \begin{center}
@@ -291,7 +291,7 @@ Second, we must produce an analogue of logarithmic differentiation, which is res
 
 The conjecture, then, is that these pieces form the foundations of a local residue pairing internal to the theory of formal groups, which, appropriately interpreted, gives the duality paring between the covariant and contravariant geometric Dieudonn\'e modules. but there are still several details left to the enterprising reader, such as: should the de Rham complex be replaced?  Relatedly, can \(\breve D_{\G}\) or \(D_{\widehat{\mathbb H}}^{\widehat{\mathbb G}}\) be used to give a coordinate-free description of the deformation complex of \Cref{DeformationComplex}?  Where do \emph{primitives} in de Rham cohomology enter play?  How do the formulas for \(\sigma\) in terms of \(\breve D_{\G}\)~\cite[VII.6.14]{LazardCFGs} enter this story---presumably in demonstrating perfection?
 
-In a more topological direction, one wonders to what extent it is critical to use \(\HFp\) in the machinery built up in \Cref{LEFTCooperations}.  In particular, could \(\HFp\) be replaced by another field spectrum to build Morava \(K\)--theoretic analogues of Brown--Gitler spectra?  There is some existing work on this in the height \(1\) case, due to Bousfield~\cite{BousfieldLambdaRings}, but the matter remains ultimately unsettled.
+In a more topological direction, one wonders to what extent it is critical to use \(\HFp\) in the machinery built up in \Cref{LEFTCooperations}.  In particular, could \(\HFp\) be replaced by another field spectrum to build Morava \(K\)--theoretic analogues of Brown--Gitler spectra?  There is some existing work on this in the height \(1\) case, due to Bousfield~\cite{BousfieldLambdaRings}, but the matter remains unsettled.
 
 
 
@@ -321,7 +321,7 @@ An unpublished theorem of Hopkins and Lurie describes the \(E\)--theoretic \text
 \end{align*}
 By setting \(E = \S\), it follows that the homotopy groups of \(I_{\Q_p/\Z_p}\) mostly match those of \(\S\) itself (or, rather, their Pontryagin duals), so computing them is equivalent to computing the homotopy groups of spheres.  The Hopkins--Lurie theorem gives an interesting approach to performing this computation: the chromatic fracture square for \(L_d \gl_1 E_\Gamma\) couples to the logarithm to rewrite this square in terms of \(\widehat L_j\)--localizations of \(E_\Gamma\), intertwined by very complicated power operation formulas.  It would be an extremely interesting exercise to see this play out even at low heights.
 
-Finally there is a substantially different approach to associating algebro-geometric objects to the elliptic cohomology of spaces, as pioneered in work of Grojnowski~\cite{Grojnowski} and of Ginzburg--Kapranov--Vasserot~\cite{GKV}, which has been used to enormous effect by Lurie in his wide-ranging program to realize various pieces of elliptic cohomology (or, more broadly, algebraic geometry) completely internally to the algebric geometry of \(E_\infty\)--ring spectra~\cite{LurieSurveyOfEll}.\footnote{The \(\sigma\)--orientation arises essentially from considering the objects associated to \(BU(n)\) and \(BO(n)\) using these machines (see \cite[Section 5.1]{LurieSurveyOfEll} especially) and identifying certain naturally occuring local systems (of spectra).}\footnote{A curious feature of the current understanding of spectral algebraic geometry is its ongoing assumption that the ring spectra involved are \emph{connective}.  There are some results in the nonconnective (and specifically $2$--periodic) direction, but we are a long ways from giving truly satisfactory structural descriptions of the phenomena observed there.  In this setting, chromatic homotopy theory is meant to be give guiding principles: its theorems are meant to shed light on the behavior of the nonconnective spectral algebraic geometry of the sphere spectrum.}  Any serious student of elliptic cohomology should also become familiar with this framework.  It has one feature that is especially curious and worth emphasizing here: the study of power operations is incidental to the Lurie-style approach of working with \(E_\infty\) ring spectra, but his framework uses in a critical way the geometry of \(p\)--divisible groups.  It must therefore be the case that the structure of a \(p\)--divisible group---and, more presumptuously and more specifically, its subgroup lattice as in \Cref{PowerOpnsSection}---must entirely encode its theory of power operations.  It is very much worthwhile to understand this connection in more generality than just in the setting of Morava \(E\)--theory.
+Finally there is a substantially different approach to associating algebro-geometric objects to the elliptic cohomology of spaces, as pioneered in work of Grojnowski~\cite{Grojnowski} and of Ginzburg--Kapranov--Vasserot~\cite{GKV}, which has been used to enormous effect by Lurie in his wide-ranging program to realize various pieces of elliptic cohomology (or, more broadly, algebraic geometry) completely internally to the algebric geometry of \(E_\infty\)--ring spectra~\cite{LurieSurveyOfEll}.\footnote{The \(\sigma\)--orientation arises essentially from considering the objects associated to \(BU(n)\) and \(BO(n)\) using these machines (see \cite[Section 5.1]{LurieSurveyOfEll} especially) and identifying certain naturally occuring local systems (of spectra).}\footnote{A curious feature of the current understanding of spectral algebraic geometry is its assumption that the ring spectra involved are \emph{connective}.  There are some results in the nonconnective (and specifically $2$--periodic) direction, but we are a long ways from giving truly satisfactory structural descriptions of the phenomena observed there.  In this setting, chromatic homotopy theory is meant to be give guiding principles: its theorems are meant to shed light on the behavior of the nonconnective spectral algebraic geometry of the sphere spectrum.}  Any serious student of elliptic cohomology should also become familiar with this framework.  It has one feature that is especially curious and worth emphasizing here: the study of power operations is incidental to the Lurie-style approach of working with \(E_\infty\) ring spectra, but his framework uses in a critical way the geometry of \(p\)--divisible groups.  It must therefore be the case that the structure of a \(p\)--divisible group---and, more presumptuously and more specifically, its subgroup lattice as in \Cref{PowerOpnsSection}---must entirely encode its theory of power operations.  It is very much worthwhile to understand this connection in more generality than just in the setting of Morava \(E\)--theory.
 
 
 
@@ -331,7 +331,7 @@ Finally there is a substantially different approach to associating algebro-geome
 
 \subsection*{Equivariance}
 
-Since the resolution of the Kervaire invariant one question by Hill, Hopkins, and Ravenel~\cite{HHR}, the field of equivariant homotopy theory has enjoyed a serious revitalization after a rather quiet preceding period.  There is a lot to study here, and most of it is better elucidated elsewhere, but one of the central points of the Hill--Hopkins--Ravenel program is exactly the employ of formal geometry.  Namely, one of their main tools is the moduli of formal \(\Z[\!\!\sqrt{i}]\)--modules, which are formal groups equipped with a certain \(C_8\)--action effecting multiplication by the associated powers of \(\!\!\sqrt{i}\) on the tangent space.  They take as a model for this a certain bouquet of copies of \(MU\), which selects four coordinates on a given formal group, intertwined by this action of \(\!\!\sqrt{i}\).  This approach to this problem has historical precedent: the Kervaire invariant one problem is the \(p = 2\) case of a family of prime-indexed problems, and the versions satisfying \(p \ge 5\) were simultaneously resolved by Ravenel by similar methods with formal \(A\)--modules~\cite{RavenelNonexistenceArfInvariantElts}.  This leaves one case open: the Kervaire problem at \(p = 3\) remains unresolved.  From the perspective of formal \(A\)--modules, this is somewhat predictable: at large primes, a certain governing map is \(p\)--adically continuous, but it fails to be continuous at small primes.\footnote{Behrens gave a talk at the MSRI Hot Topics session on the Kervaire problem in 2010.  He addresses this point at the timecode 1h04m20s in the recorded video.}
+Since the resolution of the Kervaire invariant one question by Hill, Hopkins, and Ravenel~\cite{HHR}, the field of equivariant homotopy theory emerged from slumber to enjoy a serious revitalization.  There is a lot to study here, and most of it is better elucidated elsewhere, but one of the central points of the Hill--Hopkins--Ravenel program is exactly the employ of formal geometry.  Namely, one of their main tools is the moduli of formal \(\Z[\!\!\sqrt{i}]\)--modules, which are formal groups equipped with a certain \(C_8\)--action effecting multiplication by the associated powers of \(\!\!\sqrt{i}\) on the tangent space.  They take as a model for this a certain bouquet of copies of \(MU\), which selects four coordinates on a given formal group, intertwined by this action of \(\!\!\sqrt{i}\).  This approach to this problem has historical precedent: the Kervaire invariant one problem is the \(p = 2\) case of a family of prime-indexed problems, and the versions satisfying \(p \ge 5\) were simultaneously resolved by Ravenel by similar methods with formal \(A\)--modules~\cite{RavenelNonexistenceArfInvariantElts}.  This leaves one case open: the Kervaire problem at \(p = 3\) remains unresolved.  From the perspective of formal \(A\)--modules, this is somewhat predictable: at large primes, a certain governing map is \(p\)--adically continuous, but it fails to be continuous at small primes.\footnote{Behrens gave a talk at the MSRI Hot Topics session on the Kervaire problem in 2010.  He addresses this point at the timecode 1h04m20s in the recorded video.}
 
 In a different direction, the moduli of formal \(A\)--modules has been used to great effect by Salch to make computations deep into the chromatic layers~\cite{Salch}.  In essence, the theory of formal \(A\)--modules grant access to multiplicative ``height amplification'' theorems: deep knowledge of the homotopy groups of spheres at height \(2\) can yield extensive information at height \(2 \cdot 2\), for instance.  Salch's methods also promise to yield connections to the \(L\)--functions perspective described above, fitting into a larger program that describes the homotopy groups of higher-height localizations of spheres in much the way that polyzeta functions are associated to arithmetic schemes of cohomological dimension larger than \(1\).  All this is quite frustrating, then, in the face of Lawson's result that the moduli of formal \(A\)--modules does not admit a topological enrichment~\cite{LawsonRealizability}.
 
