kill extra paren

--- a/mo.tex
+++ b/mo.tex
@@ -170,7 +170,7 @@ There is also a \index{Thom isomorphism!cohomological}cohomological version of t
 \end{remark}
 
 \begin{example}\label{HF2RPinftyExample}
-We will close out this section by using this to actually make a calculation. Recall from \Cref{RPnThomExample} that \(T_1 \circ J_{\R}(\text{\(\L\) over \(\RP^n\)}))\) is given by \(\RP^{n+1}\).  Because \(MO\) is a connective spectrum, the truncation map \[MO \to MO(-\infty, 0] = H\pi_0 MO = \HFtwo\] is a map of ring spectra~\cite[Lemma II.2.12]{MayRingSpacesSpectra}.  Hence, we can apply the Thom isomorphism theorem to the mod--\(2\) homology of Thom complexes coming from real vector bundles:
+We will close out this section by using this to actually make a calculation. Recall from \Cref{RPnThomExample} that \(T_1 \circ J_{\R}(\text{\(\L\) over \(\RP^n\)})\) is given by \(\RP^{n+1}\).  Because \(MO\) is a connective spectrum, the truncation map \[MO \to MO(-\infty, 0] = H\pi_0 MO = \HFtwo\] is a map of ring spectra~\cite[Lemma II.2.12]{MayRingSpacesSpectra}.  Hence, we can apply the Thom isomorphism theorem to the mod--\(2\) homology of Thom complexes coming from real vector bundles:
 \begin{align*}
 \pi_* (\HFtwo \sm T(\L - 1)) & \cong \pi_* (\HFtwo \sm T(0)) \tag{Thom isomorphism} \\
 \pi_* (\HFtwo \sm \Susp^{-1} \Susp^\infty \RP^{n+1}) & \cong \pi_* (\HFtwo \sm \Susp^\infty_+ \RP^n) \tag{\Cref{RPnThomExample}} \\
