fix some clumsy sentences

--- a/mo.tex
+++ b/mo.tex
@@ -33,7 +33,7 @@ If \(\xi = S^{n-1} \times X\) is the trivial bundle, then \(T_n(\xi) = S^n \sm (
 \end{example}
 
 \begin{example}\label{RPnThomExample}
-Let \(\xi\) be the tautological \(S^0\)--bundle over the unpointed space \(\RP^\infty = BO(1)\).  Because \(\xi\) has contractible total space, \(EO(1)\), the cofiber degenerates and it follows that \(T_1(\xi) = \RP^\infty\), a pointed space.\footnote{If you already know what's coming, this should comport with the Thom isomorphism, which asserts \(x \cdot \HFtwo^* \RP^\infty \cong \widetilde{\HFtwo}^{* + 1} \RP^\infty\).}  More generally, arguing by cells shows that the Thom space for the tautological bundle over \(\RP^n\) is \(\RP^{n+1}\).
+Let \(\xi\) be the tautological \(S^0\)--bundle over the unpointed space \(\RP^\infty = BO(1)\).  Because its total space \(EO(1)\) is contractible, the cofiber degenerates, and it follows that \(T_1(\xi) = \RP^\infty\) as pointed spaces.\footnote{If you already know what's coming, this should comport with the Thom isomorphism, which asserts \(x \cdot \HFtwo^* \RP^\infty \cong \widetilde{\HFtwo}^{* + 1} \RP^\infty\).}  More generally, arguing by cells shows that the Thom space for the tautological bundle over \(\RP^n\) is \(\RP^{n+1}\).
 \end{example}
 
 Now we catalog a bunch of useful properties of the Thom space construction.  Firstly, recall that a spherical bundle over \(X\) is the same data~\cite{MayClassifyingSpaces} as a map \(X \to B \GL_1 S^{n-1}\), where \index{spectrum of units, \(\gl_1\)}\index{spherical bundle}\(\GL_1 S^{n-1}\) is the subspace of \(F(S^{n-1}, S^{n-1})\) expressed by the pullback of spaces
@@ -108,7 +108,7 @@ MO \sm MO & \simeq MO \sm \Susp^\infty_+ BO. \tag{definition of \(MO\)}
 In order to verify that this equivalence is one of \(MO\)--modules, one performs an analogous computation with \(J_{\R}^{\times 3}\).
 \end{proof}
 
-\noindent From here, the general version of Thom's theorem follows quickly:
+\noindent The general version of Thom's theorem also follows:
 
 \begin{definition}
 A map \(\phi\co MO \to E\) of homotopy ring spectra is called a \index{orientation!real}\textit{(real) orientation} of \(E\) (by \(MO\)).
