--- a/mo.tex
+++ b/mo.tex
@@ -370,13 +370,13 @@ H\F_2^* X & \from \mathcal A^* \otimes H\F_2^* X, \\
 
 Having produced the action map \(\alpha\), we are now moved to study \(\alpha\) as well as the structure group \(\Spec \mathcal A_*\) itself.  Milnor works out the Hopf algebra structure of \(\mathcal A_*\) by defining elements \(\xi_j \in \mathcal A_*\) as follows.  Taking \(X = \RP^n\) and \(x \in \HFtwo^1(\RP^n)\) the generator, he observes two things: first, \(\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}\) is nonzero, and second, any other admissible sequence of squares applied to \(x\) vanishes for degree reasons.  It follows that the coaction applied to \(x\) is supported exactly in cohomological degrees of the form \(2^j\), which determines elements \(\xi_j\) as in \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j \text{\quad (in \(\HFtwo^* \RP^n\))}.\]  Noticing that taking the limit \(n \to \infty\) gives a well-defined infinite sum, he then makes the following calculation, stable in \(n\):
 \begin{align*}
-(\lambda^* \otimes 1) \circ \lambda^*(x) & = (1 \otimes \Delta) \circ \lambda^*(x) \tag{coassociativity} \\
-(\lambda^* \otimes 1) \left( \sum_{j=0}^\infty x^{2^j} \otimes \xi_j \right) & = \\
-\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^i} \otimes \xi_i \right)^{2^j} \otimes \xi_j & = \tag{ring homomorphism} \\
-\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = (1 \otimes \Delta) \circ \lambda^*(x). \tag{characteristic \(2\)} \\
-\intertext{Then, turning to the right-hand side:}
-\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = (1 \otimes \Delta) \left( \sum_{m=0}^\infty x^{2^m} \otimes \xi_m \right) \\
-\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = \sum_{m=0}^\infty x^{2^m} \otimes \Delta(\xi_m),
+(1 \otimes \Delta) \circ \lambda^*(x) & = (\lambda^* \otimes 1) \circ \lambda^*(x) \tag{coassociativity} \\
+& = (\lambda^* \otimes 1) \left( \sum_{j=0}^\infty x^{2^j} \otimes \xi_j \right) \\
+& = \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^i} \otimes \xi_i \right)^{2^j} \otimes \xi_j \tag{ring homomorphism} \\
+(1 \otimes \Delta) \circ \lambda^*(x) & = \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j. \tag{characteristic \(2\)} \\
+\intertext{Then, turning to the left-hand side:}
+(1 \otimes \Delta) \left( \sum_{m=0}^\infty x^{2^m} \otimes \xi_m \right) & = \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j \\
+\sum_{m=0}^\infty x^{2^m} \otimes \Delta(\xi_m) & = \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j,
 \end{align*}
 from which it follows that \[\Delta \xi_m = \sum_{i+j=m} \xi_i^{2^j} \otimes \xi_j.\]  Finally, Milnor shows that this is the complete story:
 \begin{theorem}[{Milnor~\cite[Theorem 2]{Milnor}, \cite[Chapter 6]{MosherTangora}, \cite[Proposition 13.1]{LurieChromaticCourseNotes}}]\label{StableSteenrodAlgebraQuote}
